@@ -5,6 +5,8 @@ Revision history for {{$dist->name}}
           Karen Etheridge)
         - use $V env var as an override, when set, in [AutoVersion]
           (thanks, Karen Etheridge)
+        - all remaining uses of Class::Load are replaced with Module::Runtime
+          (thanks, Karen Etheridge)
 
 6.010     2017-07-10 09:22:16-04:00 America/New_York
         - a few documentation improvements (thanks, Chase Whitener, Mary
